--- a/drumduino/porttab.ui
+++ b/drumduino/porttab.ui
@@ -1,23 +1,21 @@
-<UI version="4.0" >
+<?xml version="1.0" encoding="UTF-8"?>
+<ui version="4.0">
  <class>PortTab</class>
- <widget class="QWidget" name="PortTab" >
-  <property name="objectName" >
-   <string notr="true">PortTab</string>
-  </property>
-  <property name="geometry" >
+ <widget class="QWidget" name="PortTab">
+  <property name="geometry">
    <rect>
-	<x>0</x>
-	<y>0</y>
-	<width>400</width>
-	<height>300</height>
+    <x>0</x>
+    <y>0</y>
+    <width>733</width>
+    <height>539</height>
    </rect>
   </property>
-  <property name="windowTitle" >
+  <property name="windowTitle">
    <string>PortTab</string>
-  </property>  
+  </property>
+  <layout class="QHBoxLayout" name="horizontalLayout"/>
  </widget>
- <layoutDefault spacing="6" margin="11" />
- <pixmapfunction></pixmapfunction>
+ <layoutdefault spacing="6" margin="11"/>
  <resources/>
  <connections/>
-</UI>
+</ui>
